# BitsNBytes-IT-Project-1

./: .gitignore  README.md  local_data.csv  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  your_data.csv  your_data2.csv
data/: json_data.json  rannum_data.csv  some_data.xlsx  test_data.csv
docs/plans/: 2026-02-25-ux-overhaul-design.md  2026-02-25-ux-overhaul-implementation.md
env/: pyvenv.cfg
prod/: app.py  index.py  old app.py  requirements.txt  tempCodeRunnerFile.py  your_data.csv
prod/services/: Introduction.py  clean.ipynb  clean_data.py  cleaning.py  dashboard.py  data_analysis.py  export_data.py  import_data.py  predictive_analysis.py  script_generation.py  statistical_analysis.py  visualisation.py  visualise_data.py
pyexploratory/: app.py  config.py
pyexploratory/assets/: custom.css
pyexploratory/callbacks/: __init__.py  charts.py  export.py  import_script.py  ml.py  step_panel.py  table.py  upload.py
pyexploratory/components/: context_bar.py  step_panel.py  styles.py  tables.py
pyexploratory/core/: action_log.py  cleaning_ops.py  data_store.py  file_parser.py  history.py  ml_classification.py  ml_clustering.py  ml_decision_tree.py  ml_random_forest.py  ml_regression.py  script_generator.py  script_parser.py  validators.py
pyexploratory/tabs/: table.py  (+3 more)
test/: conftest.py  test_app.py  test_data.csv
tests/: conftest.py  test.py  test_action_log.py  test_app.py  test_cleaning_ops.py  test_file_parser.py  test_history.py  test_ml.py  test_ml_decision_tree.py  test_ml_random_forest.py  test_ml_regression.py  test_validators.py
(+2 files in other folders)
