[project]
name = "pyexploratory"
version = "1.0.0"
description = "Interactive data analysis web application built with Dash"
requires-python = ">=3.9"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
